...
            child: AppBar(
              title: SvgPicture.asset(LogoConstant.horizontal,
                  height: SizeToken.xxl),
              leading: Padding(
                padding: const EdgeInsets.all(3.5),
                child: IconButtonLargeDark(
                    key: const Key('drawerButton'),
                    icon: IconConstant.menu,
                    onTap: () => drawerKey.currentState?.openDrawer()),
              ),
              centerTitle: true,
              actions: [
                Padding(
...
                    if (authController.user?.image != null) {
                      return ClipRRect(
                          borderRadius: BorderRadius.circular(SizeToken.lg),
                          child: Image.network(authController.user!.image!));
                    }
                    return IconButtonLargeDark(
                      key: const Key('loginButton'),
                      icon: IconConstant.user,
                      onTap: () => authController.login(),
                    );
                  }),
                ),
              ],
...
