...
                IconButtonLargeDark(
                  onTap: onTapIconLeft,
                  icon: iconLeft,
                ),
                iconRigth != null
                    ? IconButtonLargeDark(
                        key: const Key("goToEditing"),
                        onTap: onTapIconRight!,
                        icon: iconRigth!,
                      )
                    : const SizedBox.shrink()
              ],
            ),
...
