...
                    ),
                    const DividerDefault(),
                    MenuItem(
                      text: fourthText,
                      icon: fourthIcon,
                      onPressed: fourthOnPressed,
                      key: const Key('myStoreNavigator'),
                    ),
                  ],
                ),
              ],
            ),
            MenuItem(
...
